Fix automatic reloading.

--- a/built/main.css
+++ b/built/main.css
@@ -661,6 +661,11 @@ body {
     background-color: rgb(23 23 23 / var(--tw-bg-opacity));
   }
 
+  .dark\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
   .dark\:selection\:bg-neutral-700\/75 *::-moz-selection {
     background-color: rgb(64 64 64 / 0.75);
   }
