--- a/html_generator/src/main.css
+++ b/html_generator/src/main.css
@@ -1,13 +1,55 @@
 @tailwind base;
 
 @layer base {
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
-      segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto,
-      arial, sans-serif;
-  }
+	body {
+		font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue,
+			helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
+	}
 }
 
 @tailwind components;
 
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	@apply font-semibold text-center pb-4;
+}
+
+h1 {
+	@apply text-4xl;
+}
+
+h2 {
+	@apply text-3xl;
+}
+
+h3 {
+	@apply text-2xl;
+}
+
+h4 {
+	@apply text-xl;
+}
+
+h5 {
+	@apply text-lg;
+}
+
+h6 {
+	@apply text-base;
+}
+
+input,
+textarea,
+button {
+	@apply rounded-md shadow-sm w-full dark:bg-neutral-700;
+}
+
+button {
+	@apply bg-pink-300;
+}
