--- a/assets/built/built.css
+++ b/assets/built/built.css
@@ -623,6 +623,14 @@ video {
   top: calc(calc(32*100vw/180) * -1);
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-full {
+  bottom: 100%;
+}
+
 .bottom-grid-20 {
   bottom: calc(20*100vw/180);
 }
@@ -635,12 +643,20 @@ video {
   left: 0px;
 }
 
+.left-full {
+  left: 100%;
+}
+
 .left-grid-24 {
   left: calc(24*100vw/180);
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-full {
+  right: 100%;
 }
 
 .right-grid-16 {
@@ -655,12 +671,20 @@ video {
   top: 0px;
 }
 
+.top-full {
+  top: 100%;
+}
+
 .top-grid-24 {
   top: calc(24*100vw/180);
 }
 
 .top-grid-36 {
   top: calc(36*100vw/180);
+}
+
+.z-0 {
+  z-index: 0;
 }
 
 .z-10 {
@@ -767,6 +791,10 @@ video {
   height: calc(68*100vw/180);
 }
 
+.h-grid-69 {
+  height: calc(69*100vw/180);
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -785,6 +813,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-grid-105 {
+  width: calc(105*100vw/180);
 }
 
 .w-grid-128 {
@@ -821,6 +853,10 @@ video {
 
 .w-grid-64 {
   width: calc(64*100vw/180);
+}
+
+.w-grid-69 {
+  width: calc(69*100vw/180);
 }
 
 .w-grid-93 {
@@ -1127,6 +1163,11 @@ video {
   padding-right: calc(4*100vw/180);
 }
 
+.px-grid-5 {
+  padding-left: calc(5*100vw/180);
+  padding-right: calc(5*100vw/180);
+}
+
 .px-grid-6 {
   padding-left: calc(6*100vw/180);
   padding-right: calc(6*100vw/180);
@@ -1145,6 +1186,11 @@ video {
 .py-grid-2 {
   padding-top: calc(2*100vw/180);
   padding-bottom: calc(2*100vw/180);
+}
+
+.py-grid-6 {
+  padding-top: calc(6*100vw/180);
+  padding-bottom: calc(6*100vw/180);
 }
 
 .pt-grid-4 {
@@ -1201,6 +1247,10 @@ video {
   font-size: calc(4*100vw/180);
 }
 
+.text-grid-8 {
+  font-size: calc(8*100vw/180);
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1208,6 +1258,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-semibold {
@@ -1345,9 +1399,19 @@ h6 {
   top: calc(calc(20*100vw/180) * -1);
 }
 
+.before\:bottom-full::before {
+  content: var(--tw-content);
+  bottom: 100%;
+}
+
 .before\:left-0::before {
   content: var(--tw-content);
   left: 0px;
+}
+
+.before\:left-full::before {
+  content: var(--tw-content);
+  left: 100%;
 }
 
 .before\:right-0::before {
@@ -1355,9 +1419,24 @@ h6 {
   right: 0px;
 }
 
+.before\:top-0::before {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.before\:h-full::before {
+  content: var(--tw-content);
+  height: 100%;
+}
+
 .before\:h-grid-20::before {
   content: var(--tw-content);
   height: calc(20*100vw/180);
+}
+
+.before\:w-full::before {
+  content: var(--tw-content);
+  width: 100%;
 }
 
 .before\:w-grid-20::before {
@@ -1373,6 +1452,18 @@ h6 {
 .before\:rounded-br-tooth::before {
   content: var(--tw-content);
   border-bottom-right-radius: calc(10*100vw/180);
+}
+
+.before\:rounded-tl-tooth::before {
+  content: var(--tw-content);
+  border-top-left-radius: calc(10*100vw/180);
+}
+
+.before\:shadow-\[0_calc\(-10_\*_100vw_\/_180\)_0_0_\#283036\]::before {
+  content: var(--tw-content);
+  --tw-shadow: 0 calc(-10 * 100vw / 180) 0 0 #283036;
+  --tw-shadow-colored: 0 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .before\:shadow-\[0_calc\(10_\*_100vw_\/_180\)_0_0_\#283036\]::before {
@@ -1397,6 +1488,11 @@ h6 {
   bottom: calc(calc(20*100vw/180) * -1);
 }
 
+.after\:bottom-0::after {
+  content: var(--tw-content);
+  bottom: 0px;
+}
+
 .after\:left-0::after {
   content: var(--tw-content);
   left: 0px;
@@ -1407,14 +1503,39 @@ h6 {
   right: 0px;
 }
 
+.after\:right-full::after {
+  content: var(--tw-content);
+  right: 100%;
+}
+
+.after\:top-full::after {
+  content: var(--tw-content);
+  top: 100%;
+}
+
+.after\:h-full::after {
+  content: var(--tw-content);
+  height: 100%;
+}
+
 .after\:h-grid-20::after {
   content: var(--tw-content);
   height: calc(20*100vw/180);
 }
 
+.after\:w-full::after {
+  content: var(--tw-content);
+  width: 100%;
+}
+
 .after\:w-grid-20::after {
   content: var(--tw-content);
   width: calc(20*100vw/180);
+}
+
+.after\:rounded-br-tooth::after {
+  content: var(--tw-content);
+  border-bottom-right-radius: calc(10*100vw/180);
 }
 
 .after\:rounded-tl-tooth::after {
@@ -1434,9 +1555,28 @@ h6 {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.after\:shadow-\[0_calc\(10_\*_100vw_\/_180\)_0_0_\#283036\]::after {
+  content: var(--tw-content);
+  --tw-shadow: 0 calc(10 * 100vw / 180) 0 0 #283036;
+  --tw-shadow-colored: 0 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .after\:content-\[\'\'\]::after {
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.odd\:self-start:nth-child(odd) {
+  align-self: flex-start;
+}
+
+.even\:items-end:nth-child(even) {
+  align-items: flex-end;
+}
+
+.even\:self-end:nth-child(even) {
+  align-self: flex-end;
 }
 
 @media (prefers-color-scheme: dark) {
